<resources>
    <string name="app_name">Big Top Tricks</string>
    <string name="default_description">No description for this trick.</string>
    <string name="default_goal">No goal for this trick.</string>
    <string name="default_prop_type">Prop Unknown</string>
    <string name="into_db">has been entered into the training DB.</string>
    <string name="name_hint">Enter Tricks Name...</string>
    <string name="description_hint">Enter Tricks Description (optional)...</string>
    <string name="goal_hint">Goal (#catches, #reps, time, etc...</string>
    <string name="already_in_db">Tricks name is already on the training database.</string>
    <string name="make_unique_name">Please, enter a unique name for this trick.</string>
    <string name="trick_removed">Tricks Removed from DB</string>
    <string name="new_pr_message">Great! A new PR!</string>
    <string name="record_logged">Record Logged.</string>
    <string name="pr">PR:</string>
    <string name="goal">Goal:</string>
    <string name="start_juggling">Start Juggling!</string>
    <string name="finished_training">Finished Training.</string>
    <string name="catch_count_question">Do you want to add a catch count?</string>
    <string name="enter_catch_count">Enter Catch Count...</string>
    <string name="add">Add</string>
    <string name="time_spent_training">Time spent training this trick:</string>
    <string name="no">No</string>
    <string name="get_started_message">Welcome! Press \'Add\' to get started...</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="prop_type_hint">Prop Type (Ball, club, ring, etc...)</string>
    <string name="add_trick_to_database">Add Trick to Database</string>
    <string name="welcome_message">Welcome to Big Top Tricks! There is nothing in your training database, you need to add some tricks! Press the \'add\' button in the lower right hand corner to go to the tricks library. Select a trick, and then add it to your training database.  Once you have added a few tricks, train juggling!!!</string>
    <string name="none_entered">None Entered</string>
    <string name="widget_title">Big Top Tricks Training Database:</string>
    <string name="fail_goal"><![CDATA[Failure! Trick not entered because goal was invalid. You must enter an integer > 0.]]></string>
    <string name="fail_name"><![CDATA[Failure! Trick not entered because name is missing. You must enter a string where length > 0.]]></string>
    <string name="fail_unique">Failure! Trick not entered because trick is already in training database. You must enter a trick with a unique name.</string>
    <string name="library_title">Library of Tricks</string>
    <string name="siteswap">Siteswap:</string>
    <string name="capacity">Capacity:</string>
    <string name="source">Source:</string>
    <string name="tutorial">Tutorial:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="create_custom_trick">Create Custom Trick</string>
    <string name="complete_db_header">Name: ___ Catch Count: ___ Time Trained: ___</string>
    <string name="total_training_time">My total training time:</string>
    <string name="juggling_places">Places I have juggled:</string>
    <string name="tricks_i_have_trained">Tricks I have trained:</string>
    <string name="complete_database">Complete Database:</string>
    <string name="close">Close</string>
    <string name="not_recorded">not recorded</string>
    <string name="location_not_avaliable">Location not avaliable.</string>
    <string name="content_description_add_button">Button to add trick to database</string>
    <string name="content_description_spinner">Spinner to choose prop type</string>
    <string name="content_description_edit_text_goal">Edit text box for goal.</string>
    <string name="content_description_edit_text_description">Edit text box for trick description</string>
    <string name="content_description_edit_text_trick_name">Edit text box for trick name</string>
    <string name="content_description_juggling_gif">Juggling Gif.</string>
    <string name="content_description_add">Add Button</string>
    <string name="content_description_siteswap_graphic">Description of siteswap graphic.</string>
    <string name="content_description_graph">Graph showing progress in this trick.</string>
    <string name="content_description_prop_type">Image showing prop type</string>
    <string name="Ball">Ball</string>
    <string name="Club">Club</string>
    <string name="Ring">Ring</string>
    <string name="Poi">Poi</string>
    <string name="Knife">Knife</string>
    <string name="Chainsaw">Chainsaw</string>
    <string name="Bowling">Bowling Ball</string>
    <string name="app_name_short">Big Top</string>
    <string-array name="prop_types">
        <item>Ball</item>
        <item>Club</item>
        <item>Ring</item>
        <item>Poi</item>
        <item>Knife</item>
        <item>Chainsaw</item>
        <item>Bowling Ball</item>
    </string-array>

</resources>
