<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTricks.AddTrick">

    <EditText
        android:id="@+id/edit_text_trick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="textCapWords"
        android:hint="@string/name_hint"
        android:autofillHints="@string/cascade"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_trick_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_margin="16dp"
        android:autofillHints="@string/none_entered"
        android:hint="@string/description_hint"
        app:layout_constraintBottom_toTopOf="@id/edit_text_goal_catches"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_trick_name" />

    <EditText
        android:id="@+id/edit_text_goal_catches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:inputType="number"
        android:autofillHints="@string/one_hundred"
        android:hint="@string/goal_hint"
        app:layout_constraintBottom_toTopOf="@id/edit_text_prop_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_trick_description" />


    <Spinner
        android:id="@+id/edit_text_prop_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description_spinner"
        app:layout_constraintBottom_toTopOf="@id/button_add_trick_to_database"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_goal_catches" />

    <Button
        android:id="@+id/button_add_trick_to_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_description_add_button"
        android:text="@string/add_trick_to_database"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_prop_type" />

</android.support.constraint.ConstraintLayout>